Fix warnings due to deprecate API and unused suppress warnings annotations
Change-Id: I19a9d2ce5c55eb568de6066a8ddbf98a55ddb31e
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>